k8s/frontend-deployment.tpl.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: frontend
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: frontend
#   template:
#     metadata:
#       labels:
#         app: frontend
#     spec:
#       containers:
#         - name: frontend
#           image: iskolelk/frontend:latest
#           ports: # TODO: change to the actual volume claim name
#             - containerPort: 3000
#           envFrom:
#             - configMapRef:
#                 name: frontend-env










apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: docker-registry-secret
      containers:
        - name: frontend
          image: iskolelk/frontend:${FRONTEND_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
