k8s/backend-service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: backend-service
# spec:
#   selector:
#     app: backend
#   ports:
#     - protocol: TCP
#       port: 3002
#       targetPort: 3002 # TODO: change to the actual volume claim name


apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
  type: ClusterIP
