k8s/frontend-service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: frontend-service
# spec:
#   selector:
#     app: frontend
#   ports:
#     - protocol: TCP
#       port: 3000
#       targetPort: 3000 # TODO: change to the actual volume claim name
#   type: NodePort



apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
  # type: NodePort
