k8s/ingress.tpl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "${K8S_CLUSTER_ISSUER}"
spec:
  ingressClassName: ${K8S_INGRESS_CLASS}
  tls:
    - hosts:
        - ${K8S_FRONTEND_HOST}
        - ${K8S_API_HOST}
      secretName: ${K8S_TLS_SECRET_NAME}
  rules:
    - host: ${K8S_FRONTEND_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
    - host: ${K8S_API_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3002
