k8s/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: app-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#     - host: iskolelk.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: frontend-service
#                 port:
#                   number: 3000
#           - path: /api/
#             pathType: Prefix
#             backend:
#               service:
#                 name: backend-service
#                 port:
#                   number: 3002








# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: app-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#     - host: iskolelk.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: frontend-service
#                 port:
#                   number: 3000
#     - host: api.iskolelk.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: backend-service
#                 port:
#                   number: 3002


























# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: iskole-ingress
#   namespace: default
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#     - host: iskolelk.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: frontend-service
#                 port:
#                   number: 3000
#     - host: api.iskolelk.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: backend-service
#                 port:
#                   number: 3002





















































# before https securing-------------------------


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: app-ingress
#   namespace: default
#   annotations:
#     # No rewrite-target needed here since backend and frontend serve root paths
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: iskolelk.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: frontend-service
#                 port:
#                   number: 3000
#     - host: api.iskolelk.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: backend-service
#                 port:
#                   number: 3002 # TODO: change to the actual volume claim name




# before https securing-------------------------







# https ------ securing---------------------

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/client-max-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  tls:
    - hosts:
        - iskolelk.com
        - www.iskolelk.com
        - api.iskolelk.com
      secretName: iskolelk-com-tls
  rules:
    - host: iskolelk.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
    - host: www.iskolelk.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
    - host: api.iskolelk.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3002

# https ------ securing---------------------




































































# ===================DIDNT WORK============================================

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: app-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   ingressClassName: nginx  # <-- THIS LINE IS KEY
#   rules:
#     - host: iskolelk.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: frontend-service
#                 port:
#                   number: 3000
#           - path: /api/
#             pathType: Prefix
#             backend:
#               service:
#                 name: backend-service
#                 port:
#                   number: 3002


















# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: app-ingress
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: iskolelk.com
#       http:
#         paths:
#           - path: /api
#             pathType: Prefix
#             backend:
#               service:
#                 name: backend-service
#                 port:
#                   number: 3002
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: frontend-service
#                 port:
#                   number: 3000
